Fixed login/signup alignment

--- a/app/src/components/css/AddSongForm.css
+++ b/app/src/components/css/AddSongForm.css
@@ -26,7 +26,7 @@
     color: green;
 }
 
-.flex-column-center {
+.add-song-form .flex-column-center {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
